Fixed z-index for global background

--- a/web/assets/home/css/main.css
+++ b/web/assets/home/css/main.css
@@ -13,6 +13,7 @@ img.global-background{
 	position: absolute;
 	top: 0;
 	left: 0;
+	z-index:-99999999999;
 }
 
 #global-container{
